FTP Server CI/CD
Remove oracle dependency